@startuml
' Aggregate: Orders
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
hide empty members

class Order <<AggregateRoot>> #D4E6F1 {
  +UserId: Guid
  +Status: OrderStatus
  +TotalAmount: Money
  +CreatedAt: DateTime
  ..
  +MarkAsPaid()
  +MarkAsShipped()
  +MarkAsCompleted()
}

enum OrderStatus #FEF9E7 {
  PendingPayment
  Paid
  Shipped
  Completed
}

class OrderItem <<Entity>> #D5F5E3 {
  +OrderId: Guid
  +SkuId: Guid
  +Snapshot: ProductSnapshot
  +UnitPrice: Money
  +Quantity: int
  +TotalPrice: Money
}

class OrderShippedEvent <<DomainEvent>> #FDEDEC {
  +OrderId: Guid
  +UserId: Guid
}

' --- Inheritance ---
Order --|> AggregateRoot
OrderItem --|> Entity

' --- Composition ---
Order --> OrderStatus
Order "1" *-- "many" OrderItem
OrderItem --> ProductSnapshot

' --- Domain Events ---
Order ..> OrderShippedEvent : raises

@enduml